# leptos-tutorial

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: error.rs  main.rs  state.rs
api/src/routes/: files.rs  folders.rs  mod.rs  search.rs  stats.rs
api/src/storage/: filesystem.rs  memory.rs  mod.rs
common/: Cargo.toml
common/src/: dto.rs  error.rs  lib.rs  model.rs  path.rs
src/: main.rs
ui/: Cargo.toml  index.html  input.css
ui/src/: api.rs  app.rs  error.rs  main.rs
ui/src/components/: breadcrumb.rs  file_grid.rs  file_preview.rs  folder_tree.rs  hamburger_menu.rs  mod.rs  search_bar.rs  search_results.rs  stats_modal.rs  toolbar.rs
ui/src/components/modals/: create_folder.rs  delete_confirm.rs  mod.rs  move_picker.rs  rename.rs  upload.rs
