[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common            = { path = "../common" }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
bytes             = { workspace = true }
axum              = { workspace = true }
tower-http        = { workspace = true }
utoipa            = { workspace = true }
utoipa-swagger-ui = { workspace = true }
garde             = { workspace = true }
chrono            = { version = "0.4", features = ["serde"] }
