[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
leptos = { version = "0.8.16", features = ["csr"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "MouseEvent",
    "Window",
] }
thiserror.workspace = true
