[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
leptos = { version = "0.8.16", features = ["csr"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlAnchorElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Storage",
    "Window",
] }
js-sys = "0.3"
csv = "1.3"
thiserror.workspace = true
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "3"
